dataset1235/2025-2/805158916/users/867352253/executions/3435325918_95297336.log
== RUN (2025-09-03 15:00:02)
-- CODE: 
escala = input("Escala"). upper()
temp_entrada = float(input("valor da temperatura: "))

if (Escala == "C"):
  temp_saida = (9/5) * temp_entrada + 32
else:
  temp_saida = (5/9) * (temp_entrada - 32)
  
  print(round(temp_saida,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (Escala == "C"):
        ^^^^^^
NameError: name 'Escala' is not defined. Did you mean: 'escala'?
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (Escala == "C"):
        ^^^^^^
NameError: name 'Escala' is not defined. Did you mean: 'escala'?
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (Escala == "C"):
        ^^^^^^
NameError: name 'Escala' is not defined. Did you mean: 'escala'?
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (Escala == "C"):
        ^^^^^^
NameError: name 'Escala' is not defined. Did you mean: 'escala'?
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (Escala == "C"):
        ^^^^^^
NameError: name 'Escala' is not defined. Did you mean: 'escala'?
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (Escala == "C"):
        ^^^^^^
NameError: name 'Escala' is not defined. Did you mean: 'escala'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:57:42)
-- CODE: 
escala = input("Escala"). upper()
temp_entrada = float(input("valor da temperatura: "))
if (escala == "C"):
  temp_saida = (9/5) * temp_entrada + 32
else:
  temp_saida = (5/9) * (temp_entrada - 32)
  print(round(temp_saida,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
Escalavalor da temperatura: 160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
Escalavalor da temperatura: 37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
Escalavalor da temperatura: -1.11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:02:02)
-- CODE: 
escala = input("escala").upper()
temp_entrada = float(input("valor da temperatura: "))
if (escala == "C"):
  temp_saida = (9/5) * temp_entrada + 32
else:
  temp_saida = (5/9) * (temp_entrada - 32)
print(round(temp_saida,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
escalavalor da temperatura: 160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
escalavalor da temperatura: 37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
escalavalor da temperatura: 608.0
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
escalavalor da temperatura: 608.0
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
escalavalor da temperatura: 32.0
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
escalavalor da temperatura: -1.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:58:45)
-- CODE: 
escala = input("Escala"). upper()
temp_entrada = float(input("valor da temperatura: "))
if (escala == "C"):
  temp_saida = (9/5) * temp_entrada + 32
else:
  temp_saida = (5/9) * (temp_entrada - 32)
  print(round(temp_saida,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
Escalavalor da temperatura: 160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
Escalavalor da temperatura: 37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
Escalavalor da temperatura: -1.11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:54:25)
-- CODE: 
escala = input("Escala"). upper()
temp_entrada = float(input("valor da temperatura: "))

if (escala == "C"):
  temp_saida = (9/5) * temp_entrada
else:
  temp_saida = (5/9) * (temp_entrada - 32)

  prin(round(temp_saida,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    prin(round(temp_saida,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    prin(round(temp_saida,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    prin(round(temp_saida,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:01:44)
-- CODE: 
escala = input("escala").upper()
temp_entrada = float(input("valor da temperatura: "))
if (escala == "C"):
  temp_saida = (9/5) * temp_entrada + 32
else:
  temp_saida = (5/9) * (temp_entrada - 32)
  print(round(temp_saida,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
escalavalor da temperatura: 160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
escalavalor da temperatura: 37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
escalavalor da temperatura:
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
escalavalor da temperatura:
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
escalavalor da temperatura:
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
escalavalor da temperatura: -1.11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:57:30)
-- CODE: 
escala = input("Escala"). upper()
temp_entrada = float(input("valor da temperatura: "))
if (escala == "C"):
  temp_saida = (9/5) * temp_entrada + 32
else:
  temp_saida = (5/9) * (temp_entrada - 32)
  print(round(temp_saida,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
Escalavalor da temperatura: 160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
Escalavalor da temperatura: 37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
Escalavalor da temperatura: -1.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:01:37)
-- CODE: 
escala = input("escala").upper()
temp_entrada = float(input("valor da temperatura: "))
if (escala == "C"):
  temp_saida = (9/5) * temp_entrada + 32
else:
  temp_saida = (5/9) * (temp_entrada - 32)
  print(round(temp_saida,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
escalavalor da temperatura: 160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
escalavalor da temperatura: 37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
escalavalor da temperatura:
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
escalavalor da temperatura:
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
escalavalor da temperatura:
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
escalavalor da temperatura: -1.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:59:00)
-- CODE: 
escala = input("Escala"). upper()
temp_entrada = float(input("valor da temperatura: "))

if (escala == "C"):
  temp_saida = (9/5) * temp_entrada + 32
else:
  temp_saida = (5/9) * (temp_entrada - 32)
  
  print(round(temp_saida,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
Escalavalor da temperatura: 160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
Escalavalor da temperatura: 37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
Escalavalor da temperatura: -1.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:58:47)
-- CODE: 
escala = input("Escala"). upper()
temp_entrada = float(input("valor da temperatura: "))
if (escala == "C"):
  temp_saida = (9/5) * temp_entrada + 32
else:
  temp_saida = (5/9) * (temp_entrada - 32)
  print(round(temp_saida,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
Escalavalor da temperatura: 160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
Escalavalor da temperatura: 37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
Escalavalor da temperatura: -1.11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:55:31)
-- CODE: 
escala = input("Escala"). upper()
temp_entrada = float(input("valor da temperatura: "))
if (escala == "C"):
  temp_saida = (9/5) * (temp_entrada + 32)
else:
  temp_saida = (5/9) * (temp_entrada - 32)
  prin(round(temp_saida,2))
-- EXECUTION TIME: 
0.00666667
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    prin(round(temp_saida,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    prin(round(temp_saida,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    prin(round(temp_saida,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:00:17)
-- CODE: 
escala = input("escala"). upper()
temp_entrada = float(input("valor da temperatura: "))

if (escala == "C"):
  temp_saida = (9/5) * temp_entrada + 32
else:
  temp_saida = (5/9) * (temp_entrada - 32)
  
  print(round(temp_saida,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
escalavalor da temperatura: 160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
escalavalor da temperatura: 37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
escalavalor da temperatura:
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
escalavalor da temperatura:
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
escalavalor da temperatura:
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
escalavalor da temperatura: -1.11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:54:36)
-- CODE: 
escala = input("Escala"). upper()
temp_entrada = float(input("valor da temperatura: "))

if (escala == "C"):
  temp_saida = (9/5) * temp_entrada
else:
  temp_saida = (5/9) * (temp_entrada - 32)

  prin(round(temp_saida,2))
-- EXECUTION TIME: 
0.00666667
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    prin(round(temp_saida,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    prin(round(temp_saida,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
Escalavalor da temperatura:
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    prin(round(temp_saida,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:00:52)
-- CODE: 
escala = input("escala"). upper()
temp_entrada = float(input("valor da temperatura: "))
if (escala == "C"):
  temp_saida = (9/5) * temp_entrada + 32
else:
  temp_saida = (5/9) * (temp_entrada - 32)
  print(round(temp_saida,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
escalavalor da temperatura: 160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
escalavalor da temperatura: 37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
escalavalor da temperatura:
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
escalavalor da temperatura:
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
escalavalor da temperatura:
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
escalavalor da temperatura: -1.11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:02:10)
-- CODE: 
escala = input("escala").upper()
temp_entrada = float(input("valor da temperatura: "))
if (escala == "C"):
  temp_saida = (9/5) * temp_entrada + 32
else:
  temp_saida = (5/9) * (temp_entrada - 32)
print(round(temp_saida,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
escalavalor da temperatura: 160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
escalavalor da temperatura: 37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
escalavalor da temperatura: 608.0
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
escalavalor da temperatura: 608.0
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
escalavalor da temperatura: 32.0
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
escalavalor da temperatura: -1.11
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
